improvements to ux
